# opstwin-recovery

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY_SPACE.md  Dockerfile  GPU_HANDOFF.md  LICENSE  PRE_PUSH_CHECKLIST.md  README.md  TODO.md  TRAINING.md  capture_everything.py  client.py  env.example  eval_log.txt  evaluate.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements_v1_frozen.txt  rollout.py  rollout_log.txt  train.py  train_sft_5090.py  train_sft_v3.py  train_sft_v3_stage2.py  train_sft_v3_stage3.py  training_log.txt
baselines/: expert_solver.py
baselines/trajectories/: bad_release.jsonl  data_pipeline_regression.jsonl  false_positive.jsonl  security_cve.jsonl  summary.json
captures/: rollout_20260420_144234_summary.json  rollout_20260420_145054_summary.json  rollout_20260420_145634.jsonl  rollout_20260420_145634_summary.json
demo-assets/: README.md  blog-post.md  video-script.md
docs/: architecture.md  build-order.md  reward-model.md  scenarios.md
notebooks/: opstwin_training_colab.ipynb
results/: FINAL_RESULTS.md  baseline_inference_untrained.txt  eval_summary.json
results_v3_stage3_step45/: eval_summary.json
scripts/: README.md  diagnose_callback_vs_evaluator.py  diagnose_v1_stack_drift.py  plot_training_curve.py  push_v3_step75.py
server/: app.py  desks.py  environment.py  generator.py  graph.py  hidden_state.py  postmortem.py  scenarios.py  scoring.py
tests/: smoke_all_scenarios.py  smoke_bad_release.py  smoke_http.py  test_environment.py
